Change history object to maintain its own sorting order and add documentation